force-app/main/default/objects/FINS_Client_Priority__c/FINS_Client_Priority__c.object-meta.xml
<CustomObject>
    <label>Client Priority</label>
    <nameField>
        <displayFormat>AP-{0000}</displayFormat>
        <label>Client Priority Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Client Priorities</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>