force-app/main/default/objects/FINS_Client_Priority__c/fields/FINS_CIB_Client__c.field-meta.xml
<CustomField>
    <fullName>FINS_CIB_Client__c</fullName>
    <label>Client</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Client Priorities</relationshipLabel>
    <relationshipName>Client_Priorities</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>