force-app/main/default/objects/FINS_Client_Priority__c/fields/FINS_CIB_Description__c.field-meta.xml
<CustomField>
    <fullName>FINS_CIB_Description__c</fullName>
    <label>Description</label>
    <length>80</length>
    <type>Text</type>
</CustomField>